--- a/src/app/shared/components/table/table.component.scss
+++ b/src/app/shared/components/table/table.component.scss
@@ -121,6 +121,10 @@ button:focus {
     .ag-column-select-column-group .ag-icon-tree-closed{
         margin-top: -5px;
     }
+
+    .ag-center-cols-container {
+        width: 100% !important;
+    }
 }
 
 // RESET BUTTON //
