--- a/src/app/post-login/components/financial-data/financial-data.component.scss
+++ b/src/app/post-login/components/financial-data/financial-data.component.scss
@@ -9,12 +9,11 @@ button:focus {
 }
 
 .main-container {
-    padding: 42px 104px 165px 113px;
+    padding: 22px 24px 165px 30px;
 
     @media (min-width: 1920px) {
-        width: 1694px !important;
-        margin: 33px auto 42px !important;
-        padding: 42px 0px 165px 0px;
+        margin: 22px 24px 165px 30px !important;
+        padding: 0px;
     }
 }
 
@@ -64,7 +63,6 @@ button:focus {
 }
 
 .section-header{
-    margin-top: 27px; 
     display: flex;
     justify-content: space-between;
 
