--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -29,6 +29,7 @@
         [enableCharts]="enableCharts"
         [getRowStyle]="getRowStyle"
         (paginationChanged)="onPaginationChange($event)"
+        (filterChanged)="onFilterChanged($event)"
         (gridReady)="onGridReady($event)"
     ></ag-grid-angular>
 
