--- a/src/app/shared/components/table/table.component.scss
+++ b/src/app/shared/components/table/table.component.scss
@@ -123,7 +123,7 @@ button:focus {
     }
 
     .ag-center-cols-container {
-        width: 100% !important;
+        min-width: 100% !important;
     }
 }
 
