--- a/src/app/post-login/components/leads-per-community/leads-per-community.component.html
+++ b/src/app/post-login/components/leads-per-community/leads-per-community.component.html
@@ -2,7 +2,7 @@
     <div class="section-header">
         <div class="heading">
             <img src="assets/images/bar-chart-icon.png" alt="Bar-chart icon">
-            <h1>Leads per Community</h1>
+            <h1>Client Health Metrics (AMV2)</h1>
         </div>
         <div class="search-section">
             <div class="input-container">
