--- a/src/app/shared/components/table/table.component.scss
+++ b/src/app/shared/components/table/table.component.scss
@@ -56,16 +56,12 @@ button:focus {
         font-weight: 400;
     }
 
-    // FLOATING FILTER
+    // // FLOATING FILTER
     .ag-floating-filter {
         border-top: none !important;
         &::after {
         display: none;
         }
-    }
-
-    .ag-floating-filter-button {
-        margin-left: unset;
     }
 
     .ag-icon-filter::before {
@@ -80,6 +76,32 @@ button:focus {
             border: none;
             border-bottom: 1px solid #dfdfdf;
         }
+    }
+
+    .ag-floating-filter-active{
+        .ag-icon{
+            background-color: rgba(226,236,251,255) !important;
+            border-radius: 2px;
+            height: 19px;
+            width: 23px;
+            padding-top: 2px;
+            padding-left: 2px;
+        }
+        .ag-icon-filter::before {
+            clip-path: path("M8,0C8,4.415 11.585,8 16,8L16,16L0,16L0,0L8,0Z");
+            display: block;
+            width: 19px;
+        }
+        .ag-icon::after    {
+            content: "";
+             position: absolute;
+             width: 3.5px;
+             height: 3.5px;
+             top: 11px;
+             right: 11px;
+             border-radius: 50%;
+             background-color: #2196f3;
+             }
     }
 
     .ag-ltr .ag-header-expand-icon{
@@ -124,6 +146,10 @@ button:focus {
 
     .ag-center-cols-container {
         min-width: 100% !important;
+    }
+    
+    .ag-set-filter-item-checkbox {
+        overflow: unset !important;
     }
 }
 
@@ -424,4 +450,28 @@ button:focus {
         border-radius: 50% !important;
         border: 2px solid black !important;
     }
+
+    
+}
+
+:host ::ng-deep{
+
+    .ag-filter-apply-panel-button {
+        border: 1px solid #80808061 !important;
+        background: white !important;
+        padding: 6px 15px;
+        border-radius: 5px;
+        font-weight: 500;
+    }
+
+     .ag-filter-active:after {
+        content: "" !important;
+        position: absolute;
+        width: 6px;
+        height: 6px;
+        top: -1px;
+        right: -1px;
+        border-radius: 50%;
+        background-color: var(--ag-active-color) !important;
+     }
 }
