--- a/src/app/post-login/components/chat-configuration/chat-node-categories/chat-node-categories.component.scss
+++ b/src/app/post-login/components/chat-configuration/chat-node-categories/chat-node-categories.component.scss
@@ -9,7 +9,7 @@ button:focus {
 }
 
 .main-container {
-    padding: 22px 24px 24px 30px;
+    padding: 22px 24px 42px 30px;
     flex-grow: 1;
 }
 
@@ -146,115 +146,8 @@ button:focus {
     }
 }
 
-// TABLE STYLE //
-.ag-theme-balham {
-    --ag-selected-row-background-color: #f3f6f7 !important;
-    --ag-row-hover-color: none !important;
-    --ag-input-focus-box-shadow: 0 0 2px 1px transparent !important;
-}
-
+// // TABLE STYLE //
 :host ::ng-deep {
-    .ag-header-row {
-        color: #2A2A2A;
-        font-family: 'Proxima Nova';
-        font-size: 12px;
-        font-weight: 600;
-        line-height: 16px;
-    }
-
-    .ag-header-cell-text{
-        text-transform: capitalize;
-    }
-
-    .ag-row-odd {
-        background: none;
-    }
-
-    .ag-row-selected::before {
-        background-color: transparent;
-    }
-
-    .ag-cell {
-        display: flex;
-        align-items: center;
-        font-family: 'Proxima Nova';
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 16px;
-    }
-
-    .ag-row-level-1 {
-        background: rgba(217, 217, 217, 0.2);
-    }
-
-    // FLOATING FILTER
-    .ag-floating-filter {
-        border-top: none !important;
-
-        &::after {
-            display: none;
-        }
-    }
-
-    .ag-floating-filter-button {
-        margin-left: unset;
-    }
-
-    .ag-icon-filter::before {
-        content: url("/assets/images/floating-filter-icon.svg");
-    }
-
-    .ag-header-row-column-filter {
-        background-color: #fff;
-
-        .ag-floating-filter input {
-            background-color: #fff;
-            border: none;
-            border-bottom: 1px solid #dfdfdf;
-        }
-    }
-
-    .ag-ltr .ag-header-expand-icon {
-        padding-left: 5px;
-    }
-
-    .ag-header-expand-icon-collapsed .ag-icon-contracted::before {
-        content: url("/assets/images/chevron-right-icon.svg");
-    }
-
-    .ag-icon-expanded::before {
-        content: url("/assets/images/chevron-left.svg");
-    }
-
-    .ag-icon-contracted {
-        margin-top: -4px;
-    }
-
-    .ag-icon-expanded {
-        margin-top: -8px;
-    }
-
-    .ag-column-panel-column-select {
-        border-top: none;
-    }
-
-    .ag-column-select-header-icon .ag-icon-tree-open,
-    .ag-column-select-column-group .ag-icon-tree-open,
-    .ag-filter-toolpanel-group-title-bar-icon,
-    .ag-filter-toolpanel-expand {
-        margin-top: -6px;
-    }
-
-    .ag-column-select-header-icon .ag-icon-tree-closed,
-    .ag-filter-toolpanel-group-title-bar-icon .ag-icon-tree-open,
-    .ag-filter-toolpanel-expand .ag-icon-tree-open {
-        margin-top: -3px;
-    }
-
-    .ag-column-select-column-group .ag-icon-tree-closed {
-        margin-top: -5px;
-    }
-
     .ag-pinned-right-header,
     .ag-horizontal-right-spacer {
         width: 60px !important;
@@ -267,156 +160,6 @@ button:focus {
 
     .ag-center-cols-container {
         width: 100% !important;
-    }
-}
-
-// SCROLLBAR //
-:host ::ng-deep {
-    .ag-ltr .ag-body-vertical-scroll.ag-scrollbar-invisible {
-        right: 4px;
-    }
-
-    .ag-root ::-webkit-scrollbar {
-        width: 6px !important;
-        height: 6px !important;
-        margin-right: 2px;
-        z-index: 99;
-    }
-
-    .ag-root ::-webkit-scrollbar-thumb {
-        background-color: #d9d9d9;
-        border-radius: 6px;
-    }
-
-    .ag-body-vertical-scroll {
-        right: 5px;
-        position: absolute !important;
-    }
-}
-
-// CHECKBOX //
-:host ::ng-deep .ag-pinned-left-header {
-    .ag-checkbox-input {
-        appearance: none;
-        -webkit-appearance: none;
-        cursor: pointer;
-    }
-
-    .ag-header-select-all {
-        margin-right: 5px;
-    }
-
-    .ag-checkbox-input-wrapper:active {
-        box-shadow: none;
-    }
-
-    .ag-checkbox-input-wrapper {
-        background-color: transparent !important;
-    }
-
-    .ag-checkbox-input-wrapper::after {
-        display: block;
-        content: url("/assets/images/chevron-right-icon.svg");
-        background: fixed;
-        background-size: cover;
-        margin-left: 2px;
-        margin-top: -2px;
-    }
-
-    .ag-checkbox-input-wrapper.icon-clicked::after {
-        display: block;
-        content: url("/assets/images/chevron-down-icon.svg");
-        background: fixed;
-        background-size: cover;
-        margin-left: 0;
-        margin-top: -4px;
-    }
-}
-
-// RESET BUTTON //
-.resetButton {
-    position: absolute;
-    background-color: #f7f7f7;
-    border-right: 1px solid rgb(189, 195, 199) !important;
-    height: 65px;
-    width: 87.5%;
-    border: 0;
-    font-size: 14px;
-    color: #0a4569;
-    font-weight: 700;
-    top: 0;
-    left: 0;
-    border-bottom: 1px solid rgb(189, 195, 199);
-
-    &:hover {
-        background: #c8d3dc !important;
-    }
-}
-
-// FLY OUT PANEL//
-:host ::ng-deep {
-    .ag-side-bar {
-        padding: 0 4px 0px 0px;
-        position: relative;
-    }
-
-    .ag-side-button-label,
-    .ag-tool-panel-wrapper,
-    .ag-group-title {
-        color: #2a2a2a;
-        font-family: "Proxima Nova";
-        font-size: 12px;
-        font-weight: 400;
-        line-height: 16px;
-    }
-
-    .ag-side-buttons {
-        padding-top: 0;
-        margin-top: 33px;
-        margin-left: 5px;
-    }
-
-    .ag-side-button .ag-icon-columns::before {
-        content: url("/assets/images/column-icon-dark.svg");
-    }
-
-    .ag-side-button .ag-icon-filter::before {
-        content: url("/assets/images/floating-filter-icon.svg");
-    }
-
-    .ag-side-button-icon-wrapper {
-        margin-bottom: 4px;
-    }
-
-    button.ag-side-button-button {
-        border: none;
-        padding: 0;
-    }
-
-    .ag-side-button:last-child {
-        margin-top: 31px;
-    }
-
-    .ag-side-bar-right .ag-tool-panel-wrapper {
-        margin-top: 65px;
-    }
-}
-
-// STATUS PANEL //
-:host ::ng-deep {
-    .ag-status-bar {
-        display: flex;
-        align-items: center;
-        height: 36px;
-    }
-
-    .ag-status-name-value {
-        color: #2a2a2a;
-        font-family: "Proxima Nova";
-        font-size: 12px;
-        font-weight: normal;
-        line-height: 16px;
-        padding: 0;
     }
 }
 
