--- a/src/app/shared/components/table/table.component.scss
+++ b/src/app/shared/components/table/table.component.scss
@@ -260,7 +260,7 @@ button:focus {
         right: 12px;
     }
 
-    .ag-icon::before {
+    .ag-paging-button .ag-icon::before {
         color: #296689 !important;
     }
   
